--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@next/font": "13.2.4",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.2",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
