--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "express": "^4.18.2",
+    "md5-hash": "^1.0.1",
     "mongoose": "^7.0.2",
     "next": "13.2.4",
     "react": "18.2.0",
